Merged PR 1203: feat(data-service): add new autoDate to kpt lib